# WCAN

./: README.md
Documentation/: Code.canvas  Flow.canvas  Next steps.md
thesis/: .gitignore  PLANO_ATUALIZACAO_TCC.md  main.tex  references.bib  thesis.tex
thesis/images/: code_flow_tcc.drawio
thesis/tex/: glossario.tex
thesis/tex/appendix/: full_run.tex  main_cpp.tex
thesis/tex/capitulos/: conclusao.tex  desenvolvimento.tex  framework.tex  introducao.tex  metodos.tex  problema.tex  requisitos.tex  resultados_testes.tex  solucoes_consideradas.tex
thesis/tex/post-textual/: declaracao_ia.tex
thesis/tex/pre-textual/: agradecimentos.tex
transmitter/: .clang-format  .clang-tidy  .editorconfig  .gitignore  .nextcloudignore  CMakeLists.txt  DESIGN.md  deploy.ps1  deploy_target.ps1  sdkconfig.defaults  sdkconfig_esp32  sdkconfig_esp32c3
transmitter/components/sensors/: CMakeLists.txt  adc_reader.cpp  button_monitor.cpp  car.cpp
transmitter/components/sensors/inc/: adc_reader.h  button_monitor.h  car.h
transmitter/components/sensors/src/: adc_reader.cpp  button_monitor.cpp  car.cpp
transmitter/components/utils/: CMakeLists.txt
transmitter/components/utils/inc/: battery.hpp
transmitter/components/utils/src/: battery.cpp
transmitter/components/wcan/: CMakeLists.txt  Packet.cpp  Stats.cpp  TransceiverBase.cpp  can.cpp  wcan.cpp  wcan_receiver.cpp  wcan_sender.cpp  wcan_utils.cpp
transmitter/components/wcan/inc/: Packet.hpp  RingBuffer.hpp  Stats.hpp  TransceiverBase.hpp  can.h  wcan.h  wcan.hpp  wcan_receiver.h  wcan_sender.h  wcan_utils.h
transmitter/components/wcan_broadcast/: CMakeLists.txt  Transceiver.cpp  wcan.cpp  wcan_receiver.cpp  wcan_sender.cpp  wcan_utils.cpp
transmitter/components/wcan_broadcast/inc/: Transceiver.hpp  wcan.hpp  wcan_sender.hpp  wcan_utils.hpp
transmitter/components/wcan_broadcast_old/: wcan.cpp  wcan_sender.cpp
transmitter/components/wcan_multicast/: CMakeLists.txt  Transceiver.cpp  wcan.cpp  wcan_sender.cpp  wcan_subscriptions.cpp  wcan_utils.cpp
transmitter/components/wcan_multicast_old/: wcan_receiver.cpp  wcan_sender.cpp
transmitter/components/wcan_sensor/: CMakeLists.txt  RampCanSensor.cpp
transmitter/components/wcan_test/: CMakeLists.txt  WcanTest.cpp
transmitter/components/wcan_unicast/: wcan.cpp  wcan_receiver.cpp  wcan_sender.cpp  wcan_subscriptions.cpp
transmitter/main/: CMakeLists.txt  app_config.hpp  app_stats.hpp  main.cpp  receiver_app.hpp  runtime_config.cpp  runtime_config.hpp  sensor_app.hpp
transmitter/scripts/: run_checks.py
transmitter/testing/: README.md  aggregate_thesis_data.py  analysis.py  analyze_logs.py  boards.yaml  build.py  flash.py  idf_env.py  monitor.py  pyproject.toml  tcc.canvas  test_runner.py  tests.yaml  wcan_test_config.py  wcan_test_plan.py
undergraduate_thesis/paper/: .gitignore  RESULTADOS_FINAIS_MEMO.md  thesis.tex
undergraduate_thesis/paper/images/: code_flow_tcc.drawio
undergraduate_thesis/paper/tex/: glossario.tex
undergraduate_thesis/presentation/: .gitignore  config.tex  presentation.tex  style.sty
undergraduate_thesis/presentation/slides/: 01-introducao.tex  02-desenvolvimento.tex  03-resultados.tex  04-conclusao.tex  05-referencias.tex  99-backup.tex
(+2583 files in other folders)
